--- a/index.html
+++ b/index.html
@@ -1,12 +1,53 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>Untitled Document</title>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Air RV</title>
+	<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-	<h1>TEST</h1>
-	<p>Hello</p>
+	<div class="container">
+        <header>
+            <h2>Logo</h2>
+        </header>
+        <main>
+            <!-- SCREEN 1 -->
+            <section id="screen-1">
+                <h3>Screen 1</h3>
+                <p>This is the First screen's content</p>
+                <img src="https://picsum.photos/200/300" alt="A Random Image">
+            </section>
+
+            <!-- SCREEN 2 -->
+            <section id="screen-2">
+                <h3>Screen 2</h3>
+                <p>This is the Second screen's content</p>
+                <img src="https://picsum.photos/200/300" alt="A Random Image">
+            </section>
+
+            <!-- SCREEN 3 -->
+            <section id="screen-3">
+                <h3>Screen 3</h3>
+                <p>This is the Third screen's content</p>
+                <img src="https://picsum.photos/200/300" alt="A Random Image">
+            </section>
+
+        </main>
+    </div>
+
+    <nav>
+        <div class="nav-item button-1">
+            <span>Screen 1</span>
+        </div>
+        <div class="nav-item button-2">
+            <span>Screen 2</span>
+        </div>
+        <div class="nav-item button-3">
+            <span>Screen 3</span>
+        </div>
+    </nav>
 </body>
 </html>
