--- a/index.html
+++ b/index.html
@@ -11,33 +11,21 @@
 <body>
 	<div class="container">
         <header>
-            <h2>Logo</h2>
+            <h2 class="logo">Logo</h2>
+			<h2 class="menu">Hamburger</h2>
         </header>
         <main>
             <!-- SCREEN 1 -->
             <section id="screen-1">
-                <h3>Screen 1</h3>
-                <p>This is the First screen's content</p>
-                <img src="https://picsum.photos/200/300" alt="A Random Image">
+                <img class="hero" src="img/home-hero.jpg" alt="Hero">
             </section>
-
-            <!-- SCREEN 2 -->
-            <section id="screen-2">
-                <h3>Screen 2</h3>
-                <p>This is the Second screen's content</p>
-                <img src="https://picsum.photos/200/300" alt="A Random Image">
-            </section>
-
-            <!-- SCREEN 3 -->
-            <section id="screen-3">
-                <h3>Screen 3</h3>
-                <p>This is the Third screen's content</p>
-                <img src="https://picsum.photos/200/300" alt="A Random Image">
-            </section>
-
-        </main>
-    </div>
-
+			<!-- NAVIGATION -->
+			<div class="icon-bar">
+				<a href="#"><img class="nav-icon" src="img/icons/class b.png"/></a>
+				<a href="#"><img class="nav-icon" src="img/icons/class b.png"/></a>
+				<a href="#"><img class="nav-icon" src="img/icons/class c.png"/></a>
+				<a href="#"><img class="nav-icon" src="img/icons/camper.png"/></a>
+			  </div>
     <nav>
         <div class="nav-item button-1">
             <span>Screen 1</span>
