Main Page Update

--- a/index.html
+++ b/index.html
@@ -23,9 +23,48 @@
 			<div class="icon-bar">
 				<a href="#"><img class="nav-icon" src="img/icons/class b.png"/></a>
 				<a href="#"><img class="nav-icon" src="img/icons/class b.png"/></a>
-				<a href="#"><img class="nav-icon" src="img/icons/class c.png"/></a>
-				<a href="#"><img class="nav-icon" src="img/icons/camper.png"/></a>
-			  </div>
+				<a href="#"><img class="nav-icon" src="img/icons/class b.png"/></a>
+				<a href="#"><img class="nav-icon" src="img/icons/class b.png"/></a>
+			</div>
+            <!-- SCREEN 1 -->
+            <section id="screen-1">
+                <div class="product-card">
+                    <img class="product-image" src="../air-rv/img/class-a/aidra/class-a-aidra-sonic-1.jpg">
+                </div>
+                    <div class="product-info">
+                        <h2 class="product-location">Norfolk Coast, Norfolk, England</h2>
+                        <h3 class="product-model">Lorem Ipsum</h3>
+                        <h3 class="product-date">1-6 Jan</h3>
+                        <h2 class="product-price">£0.00 Total</h2>
+                    </div>
+            </section>
+            <!-- SCREEN 2 -->
+            <section id="screen-2">
+                <div class="product-card">
+                    <img class="product-image" src="../air-rv/img/class-a/burstner/class-a-burstner-1.jpg">
+                </div>
+                    <div class="product-info">
+                        <h2 class="product-location">Norfolk Coast, Norfolk, England</h2>
+                        <h3 class="product-model">Lorem Ipsum</h3>
+                        <h3 class="product-date">1-6 Jan</h3>
+                        <h2 class="product-price">£0.00 Total</h2>
+                    </div>
+            </section>
+            <!-- SCREEN 3 -->
+            <section id="screen-3">
+                <div class="product-card">
+                    <img class="product-image" src="../air-rv/img/class-a/frankia/class-a-frankia-1.jpg">
+                </div>
+                    <div class="product-info">
+                        <h2 class="product-location">Norfolk Coast, Norfolk, England</h2>
+                        <h3 class="product-model">Lorem Ipsum</h3>
+                        <h3 class="product-date">1-6 Jan</h3>
+                        <h2 class="product-price">£0.00 Total</h2>
+                    </div>
+            </section>
+        </main>       
+    </div>
+            
     <nav>
         <div class="nav-item button-1">
             <span>Screen 1</span>
@@ -37,5 +76,7 @@
             <span>Screen 3</span>
         </div>
     </nav>
+
+    <script src="../air-rv/js/script.js"></script>
 </body>
 </html>
