--- a/form.html
+++ b/form.html
@@ -16,19 +16,28 @@
 <!-- FORM -->
     <section id="form" style="display: block">
 		<div>
-			<h1 class="form-heading">Your Details</h1>
+			<h1 class="form-heading">Your Details</h1><br>
 			<form>
-			   <label for="fname">First name:</label><br>
-               <input type="text" id="fname" name="fname"><br><br>
-               <label for="lname">Surname:</label><br>
-               <input type="text" id="sname" name="sname"><br><br>
-			   <label for="email">Email Address:</label><br>
-               <input type="text" id="email" name="email"><br><br>
-			   <label for="contact">Contact Number:</label><br>
-               <input type="text" id="contact" name="contact"><br><br>
+				<div class="input-container">
+					<label for="fname">First name:</label><br>
+                    <input type="text" id="fname" name="fname"><br>
+				</div>
+				<div class="input-container">
+					<label for="lname">Surname:</label><br>
+                    <input type="text" id="sname" name="sname"><br>
+				</div>
+			    <div class="input-container">
+					<label for="email">Email Address:</label><br>
+                    <input type="text" id="email" name="email"><br>
+				</div>
+                <div class="input-container">
+					<label for="contact">Contact Number:</label><br>
+                    <input type="text" id="contact" name="contact"><br><br>
+				</div>
 			   <button class="form-submit">Submit</button>
 			</form>
 		</div>
 	</section>
+<!-- FORM -->
 </body>
 </html>
