--- a/form.html
+++ b/form.html
@@ -20,15 +20,15 @@
 			<form>
 				<div class="input-container">
 					<label for="fname">First name:</label><br>
-                    <input type="text" id="fname" name="fname"><br>
+                    <input type="text" id="fname" name="fname"><br><br>
 				</div>
 				<div class="input-container">
 					<label for="lname">Surname:</label><br>
-                    <input type="text" id="sname" name="sname"><br>
+                    <input type="text" id="sname" name="sname"><br><br>
 				</div>
 			    <div class="input-container">
 					<label for="email">Email Address:</label><br>
-                    <input type="text" id="email" name="email"><br>
+                    <input type="text" id="email" name="email"><br><br>
 				</div>
                 <div class="input-container">
 					<label for="contact">Contact Number:</label><br>
