Main Page Update 2

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </div>
                     <div class="product-info">
                         <h2 class="product-location">Norfolk Coast, Norfolk, England</h2>
-                        <h3 class="product-model">Lorem Ipsum</h3>
+                        <h3 class="product-model">Fiat Aidra</h3>
                         <h3 class="product-date">1-6 Jan</h3>
                         <h2 class="product-price">£0.00 Total</h2>
                     </div>
@@ -62,21 +62,19 @@
                         <h2 class="product-price">£0.00 Total</h2>
                     </div>
             </section>
-        </main>       
+        </main>  
+        <nav>
+            <div class="nav-item button-1">
+                <span>Screen 1</span>
+            </div>
+            <div class="nav-item button-2">
+                <span>Screen 2</span>
+            </div>
+            <div class="nav-item button-3">
+                <span>Screen 3</span>
+            </div>
+        </nav>     
     </div>
-            
-    <nav>
-        <div class="nav-item button-1">
-            <span>Screen 1</span>
-        </div>
-        <div class="nav-item button-2">
-            <span>Screen 2</span>
-        </div>
-        <div class="nav-item button-3">
-            <span>Screen 3</span>
-        </div>
-    </nav>
-
     <script src="../air-rv/js/script.js"></script>
 </body>
 </html>
