Update - hamburger menu

--- a/form.html
+++ b/form.html
@@ -10,8 +10,8 @@
 
 <body>
 	<header>
-            <img src="img/icons/logo-design-1.png" alt="AirRv Logo">
-			<h2 class="menu">Hamburger</h2>
+            <img src="img/icons/logo-design-1.png" class="logo" alt="AirRv Logo">
+			<img src="img/icons/hamburger-menu.png" alt="Hamburger Menu">
     </header>
 <!-- FORM -->
     <section id="form-1" style="display: block">
