update - png sizes changed

--- a/form.html
+++ b/form.html
@@ -11,7 +11,7 @@
 <body>
 	<header>
             <img src="img/icons/logo-design-1.png" class="logo" alt="AirRv Logo">
-			<img src="img/icons/hamburger-menu.png" alt="Hamburger Menu">
+			<img src="img/icons/hamburger-menu.png" class="hamburger" alt="Hamburger Menu">
     </header>
 <!-- FORM -->
     <section id="form-1" style="display: block">
