update - back button

--- a/form.html
+++ b/form.html
@@ -14,6 +14,11 @@
 			<img src="img/icons/hamburger-menu.png" class="hamburger" alt="Hamburger Menu">
     </header>
 <!-- FORM -->
+	<div>
+		<a href="#" class="back-button">&#8249;</a>
+	
+	</div>
+	
     <section id="form-1" style="display: block">
 		<div>
 			<h1 class="form-trip">Your Trip</h1><br>
