--- a/form.html
+++ b/form.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-	<header>
+	<div class="container">
+		<header>
             <img src="img/icons/logo-design-1.png" class="logo" alt="AirRv Logo">
 			<img src="img/icons/hamburger-menu.png" class="hamburger" alt="Hamburger Menu">
     </header>
@@ -67,5 +68,19 @@
 		</div>
 	</section>
 <!-- FORM -->
+	</div>
+	
+	<nav>
+		<div class="nav-item-button">
+			<img class="search-icon" src="img/icons/search.png" alt="Search">
+		</div>
+		<div class="nav-item-button">
+			<img class="map-icon" src="img/icons/map.png" alt="Map">
+		</div>
+		<div class="nav-item-button">
+			<img class="about-icon" src="img/icons/about.png" alt="About">
+		</div>
+	</nav>
+	
 </body>
 </html>
