Update of page structure

--- a/class-b.html
+++ b/class-b.html
@@ -11,11 +11,11 @@
 <body>
 	<div class="container">
         <header>
-            <h2 class="logo">Logo</h2>
-			<h2 class="menu">Hamburger</h2>
+            <img class="logo" src="img/icons/logo-design-1.png">
+			<img class="hamburger" src="img/icons/hamburger-menu.png">
         </header>
         <main>
-            <!-- SCREEN 1 -->
+            <!-- HERO -->
             <section id="screen-1">
                 <img class="hero" src="img/home-hero.jpg" alt="Hero">
             </section>
@@ -23,19 +23,58 @@
 			<div class="icon-bar">
 				<a href="#"><img class="nav-icon" src="img/icons/class b.png"/></a>
 				<a href="#"><img class="nav-icon" src="img/icons/class b.png"/></a>
-				<a href="#"><img class="nav-icon" src="img/icons/class c.png"/></a>
-				<a href="#"><img class="nav-icon" src="img/icons/camper.png"/></a>
-			  </div>
+				<a href="#"><img class="nav-icon" src="img/icons/class b.png"/></a>
+				<a href="#"><img class="nav-icon" src="img/icons/class b.png"/></a>
+			</div>
+            <!-- SCREEN 1 -->
+            <section id="screen-1">
+                <div class="product-card">
+                    <img class="product-image" src="img/class-b/fiat-mobilvetta/class-b-fiat-mobilvetta-1.jpg">
+                    <div class="product-info">
+                        <h2 class="product-location">Norfolk Coast, Norfolk, England</h2>
+                        <h3 class="product-model">Fiat Aidra</h3>
+                        <h3 class="product-date">1-6 Jan</h3>
+                        <h2 class="product-price">£0.00 Total</h2>
+                    </div>
+                </div>
+            </section>
+            <!-- SCREEN 2 -->
+            <section id="screen-2">
+                <div class="product-card">
+                    <img class="product-image" src="img/class-b/hymer/class-b-hymer-1.jpg">
+                    <div class="product-info">
+                        <h2 class="product-location">Norfolk Coast, Norfolk, England</h2>
+                        <h3 class="product-model">Lorem Ipsum</h3>
+                        <h3 class="product-date">1-6 Jan</h3>
+                        <h2 class="product-price">£0.00 Total</h2>
+                    </div>
+                </div>
+            </section>
+            <!-- SCREEN 3 -->
+            <section id="screen-3">
+                <div class="product-card">
+                    <img class="product-image" src="img/class-b/merc-winne/class-b-merc-winne-1.jpg">
+                    <div class="product-info">
+                        <h2 class="product-location">Norfolk Coast, Norfolk, England</h2>
+                        <h3 class="product-model">Lorem Ipsum</h3>
+                        <h3 class="product-date">1-6 Jan</h3>
+                        <h2 class="product-price">£0.00 Total</h2>
+                    </div>
+                </div>
+            </section>
+        </main>  
+    </div>
     <nav>
-        <div class="nav-item button-1">
-            <span>Screen 1</span>
+        <div class="nav-item-button">
+            <img class="search-icon" src="img/icons/search.png">
         </div>
-        <div class="nav-item button-2">
-            <span>Screen 2</span>
+        <div class="nav-item-button">
+            <img class="map-icon" src="img/icons/map.png">
         </div>
-        <div class="nav-item button-3">
-            <span>Screen 3</span>
+        <div class="nav-item-button">
+            <img class="about-icon" src="img/icons/about.png">
         </div>
-    </nav>
+    </nav>     
+    <script src="../air-rv/js/script.js"></script>
 </body>
 </html>
