--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<img class="hamburger" src="img/icons/hamburger-menu.png">
         </header>
         <main>
-            <!-- SCREEN 1 -->
+            <!-- HERO -->
             <section id="screen-1">
                 <img class="hero" src="img/home-hero.jpg" alt="Hero">
             </section>
@@ -24,7 +24,10 @@
 				<a href="#"><img class="nav-icon" src="img/icons/class b.png"/></a>
 				<a href="#"><img class="nav-icon" src="img/icons/class b.png"/></a>
 				<a href="#"><img class="nav-icon" src="img/icons/class b.png"/></a>
-				<a href="#"><img class="nav-icon" src="img/icons/class b.png"/></a>
+				<a class="classIcons" href="#">
+                    <img class="nav-icon" src="img/icons/class b.png"/>
+                    <span>Class B</span>
+                </a>
 			</div>
             <!-- SCREEN 1 -->
             <section id="screen-1">
