Renamed + Added Nav
Renamed the html doc to "class-a-description.aidra.html". As per HTML Layout section on Figma Doc (Main page).

Also added top and bottom Nav elements

--- a/class-a-description-aidra.html
+++ b/class-a-description-aidra.html
@@ -4,15 +4,17 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Air RV</title>
+	<title>Air RV - Aidra</title>
 	<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+
+<section class="class-a-description-aidra">
 	<div class="container">
         <header>
-            <h2 class="logo">Logo</h2>
-			<h2 class="menu">Hamburger</h2>
+            <img class="logo" src="img/icons/logo-design-1.png">
+			<img class="hamburger" src="img/icons/hamburger-menu.png">
         </header>
         <main>
 
@@ -34,19 +36,19 @@
 
 
 			<!-- NAVIGATION -->
-    <nav>
-        <div class="nav-item button-1">
-            <img src="" alt="" class="search-icon">
-            <span>Search</span>
-        </div>
-        <div class="nav-item button-2">
-            <img src="" alt="" class="maps-icon">
-            <span>Maps</span>
-        </div>
-        <div class="nav-item button-3">
-            <img src="" alt="" class="about-icon">
-            <span>About</span>
-        </div>
+            <nav>
+                <div class="nav-item-button">
+                    <img class="search-icon" src="img/icons/search.png">
+                </div>
+                <div class="nav-item-button">
+                    <img class="map-icon" src="img/icons/map.png">
+                </div>
+                <div class="nav-item-button">
+                    <img class="about-icon" src="img/icons/about.png">
+                </div>
+            </nav>     
     </nav>
+</section>
+
 </body>
 </html>
