Everything on 1 page

--- a/index.html
+++ b/index.html
@@ -11,25 +11,37 @@
 <body>
 	<div class="container">
         <header>
-            <img class="logo" src="img/icons/logo-design-1.png">
-			<img class="hamburger" src="img/icons/hamburger-menu.png">
+            <a href="#hero">
+                <img class="logo" src="img/icons/logo-design-1.png">
+            </a>
+            <img class="hamburger" src="img/icons/hamburger-menu.png">
         </header>
         <main>
             <!-- HERO -->
-            <section id="screen-1">
+            <section id="hero">
                 <img class="hero" src="img/home-hero.jpg" alt="Hero">
             </section>
 			<!-- NAVIGATION -->
 			<div class="icon-bar">
-				<a href="#"><img class="nav-icon" src="img/icons/class b.png"/></a>
-				<a href="#"><img class="nav-icon" src="img/icons/class b.png"/></a>
-				<a href="#"><img class="nav-icon" src="img/icons/class b.png"/></a>
 				<a class="classIcons" href="#">
                     <img class="nav-icon" src="img/icons/class b.png"/>
-                    <span>Class B</span>
+                    <span class="icon-text">Class A</span>
+                </a>
+                <a class="classIcons" href="#">
+                    <img class="nav-icon" src="img/icons/class b.png"/>
+                    <span class="icon-text">Class B</span>
+                </a>
+                <a class="classIcons" href="#">
+                    <img class="nav-icon" src="img/icons/class b.png"/>
+                    <span class="icon-text">Class C</span>
+                </a>
+				<a class="classIcons" href="#">
+                    <img class="nav-icon" src="img/icons/class b.png"/>
+                    <span class="icon-text">Camper</span>
                 </a>
 			</div>
-            <!-- SCREEN 1 -->
+
+            <!-- SCREEN 1 / Class A -->
             <section id="screen-1">
                 <div class="product-card">
                     <img class="product-image" src="../air-rv/img/class-a/aidra/class-a-aidra-sonic-1.jpg">
@@ -40,9 +52,6 @@
                         <h2 class="product-price">£0.00 Total</h2>
                     </div>
                 </div>
-            </section>
-            <!-- SCREEN 2 -->
-            <section id="screen-2">
                 <div class="product-card">
                     <img class="product-image" src="../air-rv/img/class-a/burstner/class-a-burstner-1.jpg">
                     <div class="product-info">
@@ -52,11 +61,101 @@
                         <h2 class="product-price">£0.00 Total</h2>
                     </div>
                 </div>
-            </section>
-            <!-- SCREEN 3 -->
-            <section id="screen-3">
                 <div class="product-card">
                     <img class="product-image" src="../air-rv/img/class-a/frankia/class-a-frankia-1.jpg">
+                    <div class="product-info">
+                        <h2 class="product-location">Norfolk Coast, Norfolk, England</h2>
+                        <h3 class="product-model">Lorem Ipsum</h3>
+                        <h3 class="product-date">1-6 Jan</h3>
+                        <h2 class="product-price">£0.00 Total</h2>
+                    </div>
+                </div>
+            </section>
+
+               <!-- SCREEN 2 / Class B -->
+               <section id="screen-2">
+                <div class="product-card">
+                    <img class="product-image" src="img/class-b/fiat-mobilvetta/class-b-fiat-mobilvetta-1.jpg">
+                    <div class="product-info">
+                        <h2 class="product-location">Norfolk Coast, Norfolk, England</h2>
+                        <h3 class="product-model">Fiat Aidra</h3>
+                        <h3 class="product-date">1-6 Jan</h3>
+                        <h2 class="product-price">£0.00 Total</h2>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <img class="product-image" src="img/class-b/hymer/class-b-hymer-1.jpg">
+                    <div class="product-info">
+                        <h2 class="product-location">Norfolk Coast, Norfolk, England</h2>
+                        <h3 class="product-model">Lorem Ipsum</h3>
+                        <h3 class="product-date">1-6 Jan</h3>
+                        <h2 class="product-price">£0.00 Total</h2>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <img class="product-image" src="img/class-b/merc-winne/class-b-merc-winne-1.jpg">
+                    <div class="product-info">
+                        <h2 class="product-location">Norfolk Coast, Norfolk, England</h2>
+                        <h3 class="product-model">Lorem Ipsum</h3>
+                        <h3 class="product-date">1-6 Jan</h3>
+                        <h2 class="product-price">£0.00 Total</h2>
+                    </div>
+                </div>
+            </section>
+
+            <!-- SCREEN 3 / Class C -->
+            <section id="screen-3">
+                <div class="product-card">
+                    <img class="product-image" src="img/class-c/fiat-ducato/class-c-fiat-ducato-1.jpg">
+                    <div class="product-info">
+                        <h2 class="product-location">Norfolk Coast, Norfolk, England</h2>
+                        <h3 class="product-model">Fiat Aidra</h3>
+                        <h3 class="product-date">1-6 Jan</h3>
+                        <h2 class="product-price">£0.00 Total</h2>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <img class="product-image" src="img/class-c/ford-roller/class-c-ford-roller-1.jpg">
+                    <div class="product-info">
+                        <h2 class="product-location">Norfolk Coast, Norfolk, England</h2>
+                        <h3 class="product-model">Lorem Ipsum</h3>
+                        <h3 class="product-date">1-6 Jan</h3>
+                        <h2 class="product-price">£0.00 Total</h2>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <img class="product-image" src="img/class-c/merc-coachman/class-c-merc-coachman-1.jpg">
+                    <div class="product-info">
+                        <h2 class="product-location">Norfolk Coast, Norfolk, England</h2>
+                        <h3 class="product-model">Lorem Ipsum</h3>
+                        <h3 class="product-date">1-6 Jan</h3>
+                        <h2 class="product-price">£0.00 Total</h2>
+                    </div>
+                </div>
+            </section>
+
+            <!-- SCREEN 4 / Camper -->
+            <section id="screen-4">
+                <div class="product-card">
+                    <img class="product-image" src="img/camper/merc-sprinter/camper-merc-sprinter-1.jpg">
+                    <div class="product-info">
+                        <h2 class="product-location">Norfolk Coast, Norfolk, England</h2>
+                        <h3 class="product-model">Fiat Aidra</h3>
+                        <h3 class="product-date">1-6 Jan</h3>
+                        <h2 class="product-price">£0.00 Total</h2>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <img class="product-image" src="img/camper/volks-cali/camper-volks-cali-1.jpg">
+                    <div class="product-info">
+                        <h2 class="product-location">Norfolk Coast, Norfolk, England</h2>
+                        <h3 class="product-model">Lorem Ipsum</h3>
+                        <h3 class="product-date">1-6 Jan</h3>
+                        <h2 class="product-price">£0.00 Total</h2>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <img class="product-image" src="img/camper/volks-transport/camper-volks-transport-1.jpg">
                     <div class="product-info">
                         <h2 class="product-location">Norfolk Coast, Norfolk, England</h2>
                         <h3 class="product-model">Lorem Ipsum</h3>
