Update of entire page

--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
 			<!-- NAVIGATION -->
 			<div class="icon-bar">
 				<a class="classIcons" href="#">
-                    <img class="nav-icon" src="img/icons/class b.png"/>
+                    <img class="nav-icon" src="img/icons/class-a.png"/>
                     <span class="icon-text">Class A</span>
                 </a>
                 <a class="classIcons" href="#">
-                    <img class="nav-icon" src="img/icons/class b.png"/>
+                    <img class="nav-icon" src="img/icons/class-b.png"/>
                     <span class="icon-text">Class B</span>
                 </a>
                 <a class="classIcons" href="#">
-                    <img class="nav-icon" src="img/icons/class b.png"/>
+                    <img class="nav-icon" src="img/icons/class-c.png"/>
                     <span class="icon-text">Class C</span>
                 </a>
 				<a class="classIcons" href="#">
-                    <img class="nav-icon" src="img/icons/class b.png"/>
+                    <img class="nav-icon" src="img/icons/class-c.png"/>
                     <span class="icon-text">Camper</span>
                 </a>
 			</div>
