--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <span class="icon-text">Class C</span>
                 </a>
 				<a class="classIcons" href="#">
-                    <img class="nav-icon" src="img/icons/class-c.png"/>
+                    <img class="nav-icon" src="img/icons/camper-2.png"/>
                     <span class="icon-text">Camper</span>
                 </a>
 			</div>
@@ -531,7 +531,7 @@
                         <h1 class="form-trip">Your Trip</h1><br>
                         <form>
                         <div class="input-container">
-                            <label for="start">Start Date:</label><br>
+                            <label for="start" class="form-subheader">Start Date:</label><br>
                             <select id="start" name="start">
                                 <option value="1">1st January</option>
                                 <option value="2">2nd January</option>
@@ -539,7 +539,7 @@
                             </select>
                         </div><br>
                         <div class="input-container">
-                            <label for="end">End Date:</label><br>
+                            <label for="end" class="form-subheader">End Date:</label><br>
                             <select id="end" name="end">
                                 <option value="8">8th January</option>
                                 <option value="9">9th January</option>
@@ -555,19 +555,19 @@
                         <h1 class="form-details">Your Details</h1><br>
                         <form>
                         <div class="input-container">
-                            <label for="fname">First name:</label><br>
+                            <label for="fname" class="form-subheader">First name:</label><br>
                             <input type="text" id="fname" name="fname"><br><br>
                         </div>
                         <div class="input-container">
-                            <label for="lname">Surname:</label><br>
+                            <label for="lname" class="form-subheader">Surname:</label><br>
                             <input type="text" id="sname" name="sname"><br><br>
                         </div>
                         <div class="input-container">
-                            <label for="email">Email Address:</label><br>
+                            <label for="email" class="form-subheader">Email Address:</label><br>
                             <input type="text" id="email" name="email"><br><br>
                         </div>
                         <div class="input-container">
-                            <label for="contact">Contact Number:</label><br>
+                            <label for="contact" class="form-subheader">Contact Number:</label><br>
                             <input type="text" id="contact" name="contact"><br><br>
                         </div>
                         <button class="form-submit">Submit</button>
