Return to top of page + jQuery
Added a return to top of the page when logo is clicked.

Also, linked jQuery to doc through CDN

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<div class="container">
         <header>
             <a href="#hero">
-                <img class="logo" src="img/icons/logo-design-1.png">
+                <img class="logo" src="img/icons/logo-design-1.png" onclick="returnToTop()">
             </a>
             <img class="hamburger" src="img/icons/hamburger-menu.png">
         </header>
