EDIT image paths

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <!-- SCREEN 1 / CLASS A -->
             <section id="screen-1">
                 <div class="product-card">
-                    <img class="product-image" src="../air-rv/img/class-a/aidra/class-a-aidra-sonic-1.jpg">
+                    <img class="product-image" src="img/class-a/aidra/class-a-aidra-sonic-1.jpg">
                     <div class="product-info">
                         <h2 class="product-location">Norfolk Coast, Norfolk, England</h2>
                         <h3 class="product-model">Fiat Aidra</h3>
@@ -55,7 +55,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <img class="product-image" src="../air-rv/img/class-a/burstner/class-a-burstner-1.jpg">
+                    <img class="product-image" src="img/class-a/burstner/class-a-burstner-1.jpg">
                     <div class="product-info">
                         <h2 class="product-location">Norfolk Coast, Norfolk, England</h2>
                         <h3 class="product-model">Lorem Ipsum</h3>
@@ -64,7 +64,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <img class="product-image" src="../air-rv/img/class-a/frankia/class-a-frankia-1.jpg">
+                    <img class="product-image" src="img/class-a/frankia/class-a-frankia-1.jpg">
                     <div class="product-info">
                         <h2 class="product-location">Norfolk Coast, Norfolk, England</h2>
                         <h3 class="product-model">Lorem Ipsum</h3>
