Added Camper Description

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div class="product-card">
                     <img class="product-image" src="img/class-a/aidra/class-a-aidra-sonic-1.jpg">
                     <div class="product-info">
-                        <h2 class="product-location">Norfolk Coast, Norfolk, England</h2>
+                        <h2 class="product-location">Newcastle, England</h2>
                         <h3 class="product-model">Fiat Aidra</h3>
                         <h3 class="product-date">1-6 Jan</h3>
                         <h2 class="product-price">£0.00 Total</h2>
@@ -57,7 +57,7 @@
                 <div class="product-card">
                     <img class="product-image" src="img/class-a/burstner/class-a-burstner-1.jpg">
                     <div class="product-info">
-                        <h2 class="product-location">Norfolk Coast, Norfolk, England</h2>
+                        <h2 class="product-location">Hull, England</h2>
                         <h3 class="product-model">Lorem Ipsum</h3>
                         <h3 class="product-date">1-6 Jan</h3>
                         <h2 class="product-price">£0.00 Total</h2>
@@ -66,7 +66,7 @@
                 <div class="product-card">
                     <img class="product-image" src="img/class-a/frankia/class-a-frankia-1.jpg">
                     <div class="product-info">
-                        <h2 class="product-location">Norfolk Coast, Norfolk, England</h2>
+                        <h2 class="product-location">Swansea, Wales</h2>
                         <h3 class="product-model">Lorem Ipsum</h3>
                         <h3 class="product-date">1-6 Jan</h3>
                         <h2 class="product-price">£0.00 Total</h2>
@@ -79,7 +79,7 @@
                 <div class="product-card">
                     <img class="product-image" src="img/class-b/fiat-mobilvetta/class-b-fiat-mobilvetta-1.jpg">
                     <div class="product-info">
-                        <h2 class="product-location">Norfolk Coast, Norfolk, England</h2>
+                        <h2 class="product-location">Lincoln, England</h2>
                         <h3 class="product-model">Fiat Aidra</h3>
                         <h3 class="product-date">1-6 Jan</h3>
                         <h2 class="product-price">£0.00 Total</h2>
@@ -88,7 +88,7 @@
                 <div class="product-card">
                     <img class="product-image" src="img/class-b/hymer/class-b-hymer-1.jpg">
                     <div class="product-info">
-                        <h2 class="product-location">Norfolk Coast, Norfolk, England</h2>
+                        <h2 class="product-location">Edinburgh, Scotland</h2>
                         <h3 class="product-model">Lorem Ipsum</h3>
                         <h3 class="product-date">1-6 Jan</h3>
                         <h2 class="product-price">£0.00 Total</h2>
@@ -97,7 +97,7 @@
                 <div class="product-card">
                     <img class="product-image" src="img/class-b/merc-winne/class-b-merc-winne-1.jpg">
                     <div class="product-info">
-                        <h2 class="product-location">Norfolk Coast, Norfolk, England</h2>
+                        <h2 class="product-location">Hull, England</h2>
                         <h3 class="product-model">Lorem Ipsum</h3>
                         <h3 class="product-date">1-6 Jan</h3>
                         <h2 class="product-price">£0.00 Total</h2>
@@ -110,7 +110,7 @@
                 <div class="product-card">
                     <img class="product-image" src="img/class-c/fiat-ducato/class-c-fiat-ducato-1.jpg">
                     <div class="product-info">
-                        <h2 class="product-location">Norfolk Coast, Norfolk, England</h2>
+                        <h2 class="product-location">Guildford, England</h2>
                         <h3 class="product-model">Fiat Aidra</h3>
                         <h3 class="product-date">1-6 Jan</h3>
                         <h2 class="product-price">£0.00 Total</h2>
@@ -119,7 +119,7 @@
                 <div class="product-card">
                     <img class="product-image" src="img/class-c/ford-roller/class-c-ford-roller-1.jpg">
                     <div class="product-info">
-                        <h2 class="product-location">Norfolk Coast, Norfolk, England</h2>
+                        <h2 class="product-location">Aberdeen, Scotland</h2>
                         <h3 class="product-model">Lorem Ipsum</h3>
                         <h3 class="product-date">1-6 Jan</h3>
                         <h2 class="product-price">£0.00 Total</h2>
@@ -128,7 +128,7 @@
                 <div class="product-card">
                     <img class="product-image" src="img/class-c/merc-coachman/class-c-merc-coachman-1.jpg">
                     <div class="product-info">
-                        <h2 class="product-location">Norfolk Coast, Norfolk, England</h2>
+                        <h2 class="product-location">Stirling, Scotland</h2>
                         <h3 class="product-model">Lorem Ipsum</h3>
                         <h3 class="product-date">1-6 Jan</h3>
                         <h2 class="product-price">£0.00 Total</h2>
@@ -434,7 +434,7 @@
             <section id="product-description-all">
                 <div class="product">
                     <img class="hero" src="img/class-c/merc-coachman/class-c-merc-coachman-1.jpg" alt="Hero">
-                    <h3>Sirling, UK</h3>
+                    <h3>Stirling, UK</h3>
                     <a href=""><h4>Reviews (135)</h4></a>
                 </div>
 
@@ -458,6 +458,108 @@
                 </div>
             </nav>     
     </nav>
+</section>
+
+<!-- ------------- CAMPER - MERC SPRINTER ------------------- -->
+
+<section class="class-c-description-coachman">
+
+    <!-- SCREEN 1 -->
+    <section id="product-description-all">
+        <div class="product">
+            <img class="hero" src="img/camper/merc-sprinter/camper-merc-sprinter-1.jpg" alt="Hero">
+            <h3>..., ...</h3>
+            <a href=""><h4>Reviews (135)</h4></a>
+        </div>
+
+        <div class="product-description">
+            <h3>Mercedes, Sprinter</h3>
+            <p>If you're someone who loves to hit the open road and explore new places, you'll absolutely adore a Volkswagen Transport converted into a camper. This versatile van is the perfect vehicle for your adventures, offering a comfy sleeping area, a kitchenette, and loads of storage space for all your belongings. The interior is cleverly designed to make the most of the limited space, with a fold-out bed, dining table, and a practical kitchenette that has everything you need - a stove, sink, and fridge. Plus, it comes with some amazing extra features like solar panels and a pop-top roof that give you more space and energy for your off-grid adventures. Whether you're planning a quick weekend getaway or a long-term road trip, a Volkswagen Transport camper is the perfect way to enjoy the great outdoors in style and comfort.</p>
+        </div>
+        <button>Book Now</button>
+    </section>    
+
+    <!-- NAVIGATION -->
+    <nav>
+        <div class="nav-item-button">
+            <img class="search-icon" src="img/icons/search.png">
+        </div>
+        <div class="nav-item-button">
+            <img class="map-icon" src="img/icons/map.png">
+        </div>
+        <div class="nav-item-button">
+            <img class="about-icon" src="img/icons/about.png">
+        </div>
+    </nav>     
+</nav>
+</section>
+
+<!-- ------------- CAMPER - VOLKS CALI ------------------- -->
+
+<section class="class-c-description-coachman">
+
+    <!-- SCREEN 1 -->
+    <section id="product-description-all">
+        <div class="product">
+            <img class="hero" src="img/camper/volks-cali/camper-volks-cali-1.jpg" alt="Hero">
+            <h3>..., ...</h3>
+            <a href=""><h4>Reviews (135)</h4></a>
+        </div>
+
+        <div class="product-description">
+            <h3>Volkswagen, California</h3>
+            <p>The Volkswagen California is the ultimate adventure vehicle, perfect for camping and road trips. It sleeps up to four people and has a kitchenette, dining area, and ample storage. The modern design is stylish and sporty, with a sleek two-tone exterior and spacious, well-appointed interior. Whether you're taking a weekend getaway or embarking on a long journey, the Volkswagen California offers comfort and reliability for all your adventures.</p>
+        </div>
+        <button>Book Now</button>
+    </section>    
+
+    <!-- NAVIGATION -->
+    <nav>
+        <div class="nav-item-button">
+            <img class="search-icon" src="img/icons/search.png">
+        </div>
+        <div class="nav-item-button">
+            <img class="map-icon" src="img/icons/map.png">
+        </div>
+        <div class="nav-item-button">
+            <img class="about-icon" src="img/icons/about.png">
+        </div>
+    </nav>     
+</nav>
+</section>
+
+<!-- ------------- CAMPER - VOLKS TRANSPORT ------------------- -->
+
+<section class="class-c-description-coachman">
+
+    <!-- SCREEN 1 -->
+    <section id="product-description-all">
+        <div class="product">
+            <img class="hero" src="img/camper/volks-transport/camper-volks-transport-1.jpg" alt="Hero">
+            <h3>..., ...</h3>
+            <a href=""><h4>Reviews (135)</h4></a>
+        </div>
+
+        <div class="product-description">
+            <h3>Volkswagen, Transport</h3>
+            <p>If you're someone who loves to explore and hit the road, a converted Volkswagen Transport camper is an outstanding choice. It provides a cozy sleeping area, a kitchenette, and ample storage for all your equipment. The interior is intelligently designed to maximize the limited space, with a fold-out bed, a dining table, and a fully functional kitchenette that includes a stove, sink, and fridge. Additionally, the van comes with features like solar panels and a pop-top roof, which provide additional space and energy for off-grid adventures. Whether you're planning a weekend getaway or a long-term road trip, a Volkswagen Transport camper is a practical and stylish way to experience the great outdoors.</p>
+        </div>
+        <button>Book Now</button>
+    </section>    
+
+    <!-- NAVIGATION -->
+    <nav>
+        <div class="nav-item-button">
+            <img class="search-icon" src="img/icons/search.png">
+        </div>
+        <div class="nav-item-button">
+            <img class="map-icon" src="img/icons/map.png">
+        </div>
+        <div class="nav-item-button">
+            <img class="about-icon" src="img/icons/about.png">
+        </div>
+    </nav>     
+</nav>
 </section>
 
             <!-- FORM -->
